2005-01-07  Shane Landrum  <epicene@pobox.com>

	* en/Gnome/*: Cleaned up some <param> sections
	to include links to the types they use; edited
	<remarks> sections.

2005-01-07  Shane Landrum  <epicene@pobox.com>

	* en/GConf/ChangeSet.xml
	* en/GConf/NoSuchKeyException.xml
	* en/GConf/NotifyEventArgs.xml
	* en/GConf/ClientBase.xml
	* en/GConf/NotifyFuncNative.xml
	* en/GConf/Client.xml: Cleaned up and added docs.
	
2005-01-06  Dan Winship  <danw@novell.com>

	* en/Gtk/StockManager.xml: resurrect and update

2005-01-05  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/XEmbedMessageType.xml
	* en/Gtk/TargetPair.xml : Marked "Do not use."
	* en/Gtk/ToggleAction.xml
	* en/Gtk/Socket.xml
	* en/Gtk/Style.xml
	* en/Gtk/ToggleActionEntry.xml
	* en/Gtk/VButtonBox.xml: Added docs.

2005-01-05  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/SignalFunc.xml
	* en/Gtk/Signal.xml
	* en/Gtk/RcProperty.xml
	* en/Gtk/PrintFunc.xml
	* en/Gtk/PreviewType.xml: Marked "Do not use."
	* en/Gtk/RadioAction.xml
	* en/Gtk/Toolbar.xml
	* en/Gtk/Rc.xml: Added docs.
	
2005-01-05  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/*ImageData.xml: Removed, see
	bugzilla.ximian.com #70894.
	* en/Gtk/ListStore.xml
	* en/Gtk/MessageDialog.xml
	* en/Gtk/Main.xml
	* en/Gtk/Layout.xml
	* en/Gtk/NodeStore.xml
	* en/Gtk/Label.xml
	* en/Gtk/MatchType.xml
	* en/Gtk/Object.xml: Added docs.

2005-01-05  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/Item.xml
	* en/Gtk/Input.xml
	* en/Gtk/ToolItem.xml
	* en/Gtk/UIManager.xml: Added docs.
	* en/Gtk/IMStatusStyle.xml
	* en/Gtk/IMPreeditStyle.xml
	* en/Gtk/IMContextInfo.xml: Marked "do not use"
	pending resolution of bug 71021.
	
2005-01-04  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/ScreenChangedArgs.xml
	* en/Gtk/PropertyNotifyEventArgs.xml
	* en/Gtk/PreActivateArgs.xml
	* en/Gtk/PopupContextMenuArgs.xml
	* en/Gtk/PostActivateArgs.xml
	* en/Gtk/PathClickedArgs.xml
	* en/Gtk/NoExposeEventArgs.xml
	* en/Gtk/PixbufInsertedArgs.xml: Documented event args.
