@@ -11,7 +11,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>The structure is used as part of the output of libglade's XML parser.</summary>
-    <remarks>To be added</remarks>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.ValueType</BaseTypeName>
@@ -56,8 +56,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The key code for the accelerator.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Modifiers">
@@ -69,8 +69,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The modifier keys for the accelerator.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Signal">
@@ -82,8 +82,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The signal to which this accelerator should be connected.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
