@@ -8,7 +8,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>Event handler.</summary>
-    <remarks>To be added</remarks>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Delegate</BaseTypeName>
