@@ -56,8 +56,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>An action name.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Description">
@@ -69,8 +69,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>A description of the action.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
