@@ -10,8 +10,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>The structure is used as part of the output of libglade's XML parser.</summary>
-    <remarks />
+    <summary>This structure is used as part of the output of libglade's XML parser.</summary>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.ValueType</BaseTypeName>
@@ -57,7 +57,7 @@
       </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Type">
@@ -70,7 +70,7 @@
       </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
