@@ -10,8 +10,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>The structure is used as part of the output of libglade's XML parser.</summary>
-    <remarks />
+    <summary>This structure is used as part of the output of libglade's XML parser.</summary>
+    <remarks>Information about child widgets.</remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.ValueType</BaseTypeName>
@@ -54,9 +54,9 @@
         <ReturnType>Glade.WidgetInfo</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Glade.WidgetInfo'</returns>
-        <remarks>To be added</remarks>
+        <summary>A child widget.</summary>
+        <returns>a <see cref="T:Glade.WidgetInfo" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="properties">
@@ -66,9 +66,9 @@
         <ReturnType>Glade.Property</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Glade.Property'</returns>
-        <remarks>To be added</remarks>
+        <summary>The widget's properties.</summary>
+        <returns>a <see cref="T:Glade.Property" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="NProperties">
@@ -80,8 +80,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The number of properties this widget has.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="InternalChild">
@@ -94,7 +94,7 @@
       </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
