@@ -30,9 +30,9 @@
         <ReturnType>System.Type</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Type'</returns>
-        <remarks>To be added</remarks>
+        <summary>The type of delegate that was supposed to be connected to the signal.</summary>
+        <returns>a <see cref="T:System.Type" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="SignalName">
@@ -42,9 +42,9 @@
         <ReturnType>System.String</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'string'</returns>
-        <remarks>To be added</remarks>
+        <summary>The name of the signal that was supposed to be connected.</summary>
+        <returns>a <see cref="T:System.String" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="HandlerName">
@@ -54,9 +54,9 @@
         <ReturnType>System.String</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'string'</returns>
-        <remarks>To be added</remarks>
+        <summary>The name of the handler that was supposed to be connected.</summary>
+        <returns>a <see cref="T:System.String" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Event">
@@ -66,9 +66,9 @@
         <ReturnType>System.Reflection.EventInfo</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Information about the event.</summary>
         <returns>a <see cref="T:System.Reflection.EventInfo" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -82,13 +82,13 @@
         <Parameter Name="delegate_type" Type="System.Type" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Public constructor.</summary>
         <param name="handler_name">a <see cref="T:System.String" /></param>
         <param name="signal_name">a <see cref="T:System.String" /></param>
         <param name="evnt">a <see cref="T:System.Reflection.EventInfo" /></param>
         <param name="delegate_type">a <see cref="T:System.Type" /></param>
         <returns>a <see cref="T:Glade.HandlerNotFoundException" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -100,11 +100,11 @@
         <Parameter Name="context" Type="System.Runtime.Serialization.StreamingContext" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Protected constructor.</summary>
         <param name="info">a <see cref="T:System.Runtime.Serialization.SerializationInfo" /></param>
         <param name="context">a <see cref="T:System.Runtime.Serialization.StreamingContext" /></param>
         <returns>a <see cref="T:Glade.HandlerNotFoundException" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -119,14 +119,14 @@
         <Parameter Name="inner" Type="System.Exception" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Public constructor.</summary>
         <param name="handler_name">a <see cref="T:System.String" /></param>
         <param name="signal_name">a <see cref="T:System.String" /></param>
         <param name="evnt">a <see cref="T:System.Reflection.EventInfo" /></param>
         <param name="delegate_type">a <see cref="T:System.Type" /></param>
         <param name="inner">a <see cref="T:System.Exception" /></param>
         <returns>a <see cref="T:Glade.HandlerNotFoundException" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="GetObjectData">
@@ -140,10 +140,10 @@
         <Parameter Name="context" Type="System.Runtime.Serialization.StreamingContext" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Returns details about the object the handler was connected to.</summary>
         <param name="info">a <see cref="T:System.Runtime.Serialization.SerializationInfo" /></param>
         <param name="context">a <see cref="T:System.Runtime.Serialization.StreamingContext" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
