@@ -11,7 +11,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>The structure is used as part of the output of libglade's XML parser.</summary>
-    <remarks />
+    <remarks>A name-value pair.</remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.ValueType</BaseTypeName>
@@ -56,8 +56,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The name of the property.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Value">
@@ -69,8 +69,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The value of the property.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
