@@ -11,7 +11,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>Event handler.</summary>
-    <remarks>To be added</remarks>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Delegate</BaseTypeName>
@@ -38,7 +38,7 @@
       <Docs>
         <summary>To be added</summary>
         <param name="result">a <see cref="T:System.IAsyncResult" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="BeginInvoke">
@@ -70,7 +70,7 @@
         <param name="callback">a <see cref="T:System.AsyncCallback" /></param>
         <param name="object">a <see cref="T:System.Object" /></param>
         <returns>a <see cref="T:System.IAsyncResult" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -86,7 +86,7 @@
         <param name="object">a <see cref="T:System.Object" /></param>
         <param name="method">a <see cref="T:System.IntPtr" /></param>
         <returns>a <see cref="T:Glade.XML+SignalConnector+RawXMLConnectFunc" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Invoke">
@@ -113,7 +113,7 @@
         <param name="connect_object">a <see cref="T:System.IntPtr" /></param>
         <param name="after">a <see cref="T:System.Int32" /></param>
         <param name="user_data">a <see cref="T:System.IntPtr" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
