@@ -54,9 +54,9 @@
         <ReturnType>Glade.ChildInfo</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Glade.ChildInfo'</returns>
-        <remarks>To be added</remarks>
+        <summary>Details about child widgets.</summary>
+        <returns>a <see cref="T:Glade.ChildInfo" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="accels">
@@ -66,9 +66,9 @@
         <ReturnType>Glade.AccelInfo</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Glade.AccelInfo'</returns>
-        <remarks>To be added</remarks>
+        <summary>Details about accelerators.</summary>
+        <returns>a <see cref="T:Glade.AccelInfo" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="relations">
@@ -78,9 +78,9 @@
         <ReturnType>Glade.AtkRelationInfo</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Glade.AtkRelationInfo'</returns>
-        <remarks>To be added</remarks>
+        <summary>Details about this widget's relations.</summary>
+        <returns>a <see cref="T:Glade.AtkRelationInfo" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="atk_actions">
@@ -91,8 +91,8 @@
       </ReturnValue>
       <Docs>
         <summary>To be added</summary>
-        <returns>To be added: an object of type 'Glade.AtkActionInfo'</returns>
-        <remarks>To be added</remarks>
+        <returns>a <see cref="T:Glade.AtkActionInfo" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="signals">
@@ -103,8 +103,8 @@
       </ReturnValue>
       <Docs>
         <summary>To be added</summary>
-        <returns>To be added: an object of type 'Glade.SignalInfo'</returns>
-        <remarks>To be added</remarks>
+        <returns>a <see cref="T:Glade.SignalInfo" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="atk_props">
@@ -115,8 +115,8 @@
       </ReturnValue>
       <Docs>
         <summary>To be added</summary>
-        <returns>To be added: an object of type 'Glade.Property'</returns>
-        <remarks>To be added</remarks>
+        <returns>a <see cref="T:Glade.Property" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="properties">
@@ -127,8 +127,8 @@
       </ReturnValue>
       <Docs>
         <summary>To be added</summary>
-        <returns>To be added: an object of type 'Glade.Property'</returns>
-        <remarks>To be added</remarks>
+        <returns>a <see cref="T:Glade.Property" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="parent">
@@ -138,9 +138,9 @@
         <ReturnType>Glade.WidgetInfo</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Glade.WidgetInfo'</returns>
-        <remarks>To be added</remarks>
+        <summary>This widget's parent widget.</summary>
+        <returns>a <see cref="T:Glade.WidgetInfo" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Classname">
@@ -153,7 +153,7 @@
       </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Name">
@@ -165,8 +165,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>This widget's name.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="NProperties">
@@ -178,8 +178,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The number of properties this widget has.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="NAtkProps">
@@ -191,8 +191,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The number of AtkProperties this widget has.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="NSignals">
@@ -204,8 +204,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The number of signals this widget connects to.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="NAtkActions">
@@ -218,7 +218,7 @@
       </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="NRelations">
@@ -231,7 +231,7 @@
       </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="NAccels">
@@ -243,8 +243,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The number of accelerators this widget has.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="NChildren">
@@ -256,8 +256,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The number of children this widget has.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
