@@ -153,7 +153,7 @@ public class GladeApp
       <Docs>
         <summary>To be added</summary>
         <param name="type">an object of type <see cref="T:System.Type" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="BindFields">
@@ -168,7 +168,7 @@ public class GladeApp
       <Docs>
         <summary>To be added</summary>
         <param name="target">an object of type <see cref="T:System.Object" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Autoconnect">
@@ -508,11 +508,11 @@ public class GladeApp
       </Parameters>
       <Docs>
         <summary>GParamSpec needs to be wrapped</summary>
-        <param name="pspec">To be added: an object of type 'IntPtr'</param>
-        <param name="str1ng">To be added: an object of type 'string'</param>
-        <param name="value">To be added: an object of type 'GLib.Value'</param>
-        <returns>To be added: an object of type 'bool'</returns>
-        <remarks>To be added</remarks>
+        <param name="pspec">a <see cref="T:System.IntPtr" />" /></param>
+        <param name="str1ng">a <see cref="T:System.String" /></param>
+        <param name="value">a <see cref="T:GLib.Value" /></param>
+        <returns>a <see cref="T:System.Boolean" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="SignalConnectFull">
