@@ -1,5 +1,10 @@
 2005-01-07  Shane Landrum  <epicene@pobox.com>
 
+	* en/Glade/*: Cleaned up some parameters, added
+	docs.
+	
+2005-01-07  Shane Landrum  <epicene@pobox.com>
+
 	* en/Gnome/*: Cleaned up some <param> sections
 	to include links to the types they use; edited
 	<remarks> sections.
